--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
     "helmet": "^3.15.1",
+    "jwks-rsa": "^1.4.0",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
     "sqlite3": "^4.0.6"
